syntax = "proto3";

package protobuf.gsr.demo;

option csharp_namespace = "ProtobufGSRKafkaDemo.Messages";

message Order {
  string order_id = 1;
  string customer_id = 2;
  OrderHeader header = 3;
  repeated OrderItem items = 4;
  ShippingAddress shipping_address = 5;
  OrderStatus status = 6;
  map<string, string> metadata = 7;
  map<string, double> discounts = 8;
}

message OrderHeader {
  int64 created_timestamp = 1;
  double total_amount = 2;
  string currency = 3;
  PaymentMethod payment_method = 4;
}

message OrderItem {
  string product_id = 1;
  string name = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double total_price = 5;
}

message ShippingAddress {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip_code = 4;
  string country = 5;
}

enum OrderStatus {
  UNKNOWN_ORDER_STATUS = 0;
  PENDING = 1;
  CONFIRMED = 2;
  SHIPPED = 3;
  DELIVERED = 4;
  CANCELLED = 5;
}

enum PaymentMethod {
  UNKNOWN_PAYMENT = 0;
  CREDIT_CARD = 1;
  DEBIT_CARD = 2;
  PAYPAL = 3;
  BANK_TRANSFER = 4;
}